# papercache

./: Cargo.toml  Makefile  README.md
migrations/: 0001_initial.sql  0002_document_flags.sql
src/: app_state.rs  config.rs  error.rs  main.rs
src/db/: assets.rs  chunks.rs  documents.rs  folders.rs  jobs.rs  mod.rs  models.rs
src/index/: commands.rs  mod.rs  tantivy_index.rs
src/ingest/: chunker.rs  classifier.rs  html.rs  mod.rs  pdf.rs  pipeline.rs  scanner.rs  scheduler.rs  thumbnails.rs  watcher.rs  worker.rs
src/util/: fs.rs  hash.rs  time.rs
src/web/: assets.rs  documents.rs  events.rs  folders.rs  health.rs  jobs.rs  mod.rs  search.rs  ui.rs
ui/: package-lock.json  package.json
ui/src/: api.ts  app.test.tsx  app.tsx  index.css  index.tsx  styles.css
ui/src/components/: ChatPaperIntro.css  ChatPaperIntro.tsx  DocumentCardView.tsx  DocumentResults.tsx  EmptyState.tsx  Icon.tsx  Modal.tsx  PageHeader.tsx  SettingsModal.tsx  Sidebar.tsx  ToastStack.tsx  ViewToggle.tsx  VirtualDocumentList.tsx  types.ts  utils.ts
ui/src/pages/: JobsPage.tsx  LibraryPage.tsx  PlaceholderPage.tsx  SearchPage.tsx
ui/src/styles/: base.css  documents.css  feedback.css  folders.css  jobs.css  layout.css  modal.css  responsive.css  search.css  sidebar.css
ui/src/types/: vara.d.ts
