[package]
name = "papercache"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.13"
anyhow = "1.0.102"
async-stream = "0.3.6"
blake3 = "1.8.5"
chrono = "0.4.45"
lancedb = "0.30.0"
lopdf = "0.41.0"
notify = "8.2.0"
pdfium-render = "0.9.1"
rust-embed = { version = "8.11.0", features = ["debug-embed"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sqlx = { version = "0.9", features = ["runtime-tokio","sqlite","macros","migrate"] }
tantivy = "0.26.1"
thiserror = "2.0.18"
tokio = {version = "1.52.3", features = ["rt-multi-thread", "macros", "sync", "time", "fs", "signal"]}
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
uuid = "1.23.3"
walkdir = "2.5.0"
